--- a/share/ci/compiler_clang_cuda.yml
+++ b/share/ci/compiler_clang_cuda.yml
@@ -13,14 +13,14 @@
     - cuda
     - x86_64 
 
-.clang_cuda92:
+.base_clangCuda_cuda_9.2:
   image: registry.gitlab.com/hzdr/crp/alpaka-group-container/alpaka-ci:cuda9.2Clang
   extends: .base_cuda_clang
   
-.clang_cuda100:
+.base_clangCuda_cuda_10.0:
   image: registry.gitlab.com/hzdr/crp/alpaka-group-container/alpaka-ci:cuda10.0Clang
   extends: .base_cuda_clang
 
-.clang_cuda101:
+.base_clangCuda_cuda_10.1:
   image: registry.gitlab.com/hzdr/crp/alpaka-group-container/alpaka-ci:cuda10.1Clang
   extends: .base_cuda_clang
