--- a/share/ci/compiler_nvcc_cuda.yml
+++ b/share/ci/compiler_nvcc_cuda.yml
@@ -1,7 +1,7 @@
 ################################################################################
 #   [g++-X] : X = {5, 6, 7, 8, 9}
 
-.base_cuda:
+.base_nvcc:
   variables:
     GIT_SUBMODULE_STRATEGY: normal
   before_script:
@@ -14,18 +14,18 @@
     - cuda
     - x86_64 
     
-.nvcc_cuda92:
+.base_nvcc_cuda_9.2:
   image: registry.gitlab.com/hzdr/crp/alpaka-group-container/alpaka-ci:cuda9.2gcc
-  extends: .base_cuda
+  extends: .base_nvcc
 
-.nvcc_cuda100:
+.base_nvcc_cuda_10.0:
   image: registry.gitlab.com/hzdr/crp/alpaka-group-container/alpaka-ci:cuda10.0gcc
-  extends: .base_cuda
+  extends: .base_nvcc
   
-.nvcc_cuda101:
+.base_nvcc_cuda_10.1:
   image: registry.gitlab.com/hzdr/crp/alpaka-group-container/alpaka-ci:cuda10.1gcc
-  extends: .base_cuda  
+  extends: .base_nvcc
 
-.nvcc_cuda102:
+.base_nvcc_cuda_10.2:
   image: registry.gitlab.com/hzdr/crp/alpaka-group-container/alpaka-ci:cuda10.2gcc
-  extends: .base_cuda
+  extends: .base_nvcc
