--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,7 @@ stages:
     - apt install -y python3-pip
     - pip3 install allpairspy
     - $CI_PROJECT_DIR/share/ci/git_rebase.sh
-    - $CI_PROJECT_DIR/share/ci/generate_pairwise.sh -n 1 > compile.yml
+    - $CI_PROJECT_DIR/share/ci/generate_pairwise.sh -n ${TUPLE_NUM_ELEM} > compile.yml
     - cat compile.yml
   artifacts:
     paths:
@@ -49,7 +49,9 @@ stages:
 
 .base_nightly:
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "schedule" && $CI_COMPLEXITY == "nightly"'
+    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+
+# && $CI_COMPLEXITY == "nightly"'
 
 test-rebase-to-mainline:
   stage: rebase
@@ -59,6 +61,7 @@ test-rebase-to-mainline:
 matrix-pair:
   variables:
     PIC_INPUTS: "examples"
+    TUPLE_NUM_ELEM: 1
   extends: ".base_generator_pairwise"
 
 compile-matrix-pair:
@@ -69,72 +72,90 @@ compile-matrix-pair:
         job: matrix-pair
     strategy: depend
 
+matrix-pair-nightly:
+  variables:
+    PIC_INPUTS: "examples"
+    TUPLE_NUM_ELEM: 2
+  extends:
+    - .base_generator_pairwise
+    - .base_nightly
+
+compile-matrix-pair-nightly:
+  stage: compile
+  trigger:
+    include:
+      - artifact: compile.yml
+        job: matrix-pair-nightly
+    strategy: depend
+  extends:
+    - .base_nightly
+
 # gcc matrix
 # test simples setup to cover compatibility issues with boost
-matrix-gcc-simple:
-  variables:
-    PIC_INPUTS: "examples/Empty"
-    GITLAB_BASES: ".base_gcc"
-    CXX_VERSIONS: "g++-9"
-    BOOST_VERSIONS: "1.65.1"
-    PIC_ACCS: "omp2b"
-  extends: ".base_generator"
-
-compile-matrix-gcc-simple:
-  stage: compile
-  trigger:
-    include:
-      - artifact: compile.yml
-        job: matrix-gcc-simple
-    strategy: depend
-
-# clang matrix
-# test simples setup to cover compatibility issues with boost
-matrix-clang-simple:
-  variables:
-    PIC_INPUTS: "examples/Empty"
-    GITLAB_BASES: ".base_clang"
-    CXX_VERSIONS: "clang++-5.0"
-    BOOST_VERSIONS: "1.65.1"
-    PIC_ACCS: "omp2b"
-  extends: ".base_generator"
-
-compile-matrix-clang-simple:
-  stage: compile
-  trigger:
-    include:
-      - artifact: compile.yml
-        job: matrix-clang-simple
-    strategy: depend
-
-
-status-check:
-  stage: status
-  script:
-    - echo "Wait for previous stages"
-  dependencies:
-    - compile-matrix-clang-simple
-    - compile-matrix-gcc-simple
-    - compile-matrix-pair
-
-# nightly build
-matrix-gcc-simple-nightly:
-  variables:
-    PIC_INPUTS: "examples/Empty"
-    GITLAB_BASES: ".base_gcc"
-    CXX_VERSIONS: "g++-9"
-    BOOST_VERSIONS: "1.65.1"
-    PIC_ACCS: "omp2b"
-  extends:
-    - .base_generator
-    - .base_nightly
-
-compile-matrix-gcc-simple-nightly:
-  stage: compile
-  trigger:
-    include:
-      - artifact: compile.yml
-        job: matrix-gcc-simple-nightly
-    strategy: depend
-  extends:
-    - .base_nightly
+#matrix-gcc-simple:
+#  variables:
+#    PIC_INPUTS: "examples/Empty"
+#    GITLAB_BASES: ".base_gcc"
+#    CXX_VERSIONS: "g++-9"
+#    BOOST_VERSIONS: "1.65.1"
+#    PIC_ACCS: "omp2b"
+#  extends: ".base_generator"
+#
+#compile-matrix-gcc-simple:
+#  stage: compile
+#  trigger:
+#    include:
+#      - artifact: compile.yml
+#        job: matrix-gcc-simple
+#    strategy: depend
+#
+## clang matrix
+## test simples setup to cover compatibility issues with boost
+#matrix-clang-simple:
+#  variables:
+#    PIC_INPUTS: "examples/Empty"
+#    GITLAB_BASES: ".base_clang"
+#    CXX_VERSIONS: "clang++-5.0"
+#    BOOST_VERSIONS: "1.65.1"
+#    PIC_ACCS: "omp2b"
+#  extends: ".base_generator"
+#
+#compile-matrix-clang-simple:
+#  stage: compile
+#  trigger:
+#    include:
+#      - artifact: compile.yml
+#        job: matrix-clang-simple
+#    strategy: depend
+#
+#
+#status-check:
+#  stage: status
+#  script:
+#    - echo "Wait for previous stages"
+#  dependencies:
+#    - compile-matrix-clang-simple
+#    - compile-matrix-gcc-simple
+#    - compile-matrix-pair
+#
+## nightly build
+#matrix-gcc-simple-nightly:
+#  variables:
+#    PIC_INPUTS: "examples/Empty"
+#    GITLAB_BASES: ".base_gcc"
+#    CXX_VERSIONS: "g++-9"
+#    BOOST_VERSIONS: "1.65.1"
+#    PIC_ACCS: "omp2b"
+#  extends:
+#    - .base_generator
+#    - .base_nightly
+#
+#compile-matrix-gcc-simple-nightly:
+#  stage: compile
+#  trigger:
+#    include:
+#      - artifact: compile.yml
+#        job: matrix-gcc-simple-nightly
+#    strategy: depend
+#  extends:
+#    - .base_nightly
