--- a/share/ci/compiler_clang.yml
+++ b/share/ci/compiler_clang.yml
@@ -7,6 +7,8 @@
     GIT_SUBMODULE_STRATEGY: normal
     PIC_CMAKE_ARGS: "-DALPAKA_CUDA_COMPILER=clang"
   script:
+      - apt update
+      - apt install -y curl
       - $CI_PROJECT_DIR/share/ci/git_rebase.sh
       - source share/ci/run_test.sh
   # x86_64 tag is used to get a multi-core CPU for the tests
