--- a/share/ci/compiler_clang_cuda.yml
+++ b/share/ci/compiler_clang_cuda.yml
@@ -7,6 +7,8 @@
     GIT_SUBMODULE_STRATEGY: normal
     PIC_CMAKE_ARGS: "-DALPAKA_CUDA_COMPILER=clang"
   script:
+    - apt update
+    - apt install -y curl
     - $CI_PROJECT_DIR/share/ci/git_rebase.sh
     - source share/ci/run_test.sh
   tags:
