--- a/share/ci/compiler_gcc.yml
+++ b/share/ci/compiler_gcc.yml
@@ -6,6 +6,8 @@
   variables:
     GIT_SUBMODULE_STRATEGY: normal
   script:
+    - apt update
+    - apt install -y curl
     - $CI_PROJECT_DIR/share/ci/git_rebase.sh
     - source share/ci/run_test.sh
   # x86_64 tag is used to get a multi-core CPU for the tests
